<resources>
    <string name="app_name">Client</string>
    <string name="loginHeader">FAMILY MAP</string>
    <string name="searchItem">Search</string>
    <string name="lifeStory">Life Story Lines</string>
    <string name="lifeStoryBottom">SHOW LIFE STORY LINES</string>
    <string name="familyTree">Family Tree Lines</string>
    <string name="familyTreeBottom">SHOW FAMILY TREE LINES</string>
    <string name="spouseLines">Spouse Lines</string>
    <string name="spouseLinesBottom">SHOW SPOUSE LINES</string>
    <string name="fatherSide">Father\'s Side</string>
    <string name="fatherSideBottom">FILTER BY FATHER \'S SIDE OF FAMILY</string>
    <string name="motherSide">Mother\'s Side</string>
    <string name="motherSideBottom">FILTER BY MOTHER \'S SIDE OF FAMILY</string>
    <string name="maleEvents">Male Events</string>
    <string name="femaleEvents">Female Events</string>
    <string name="genderBottom">FILTER EVENTS BASED ON GENDER</string>
    <string name="logout">Logout</string>
    <string name="logoutBottom">RETURN TO LOGIN SCREEN</string>
    <string name="first_name">First Name</string>
    <string name="person_name">Name of Person</string>
    <string name="last_name">Last Name</string>
    <string name="person_last_name">Last name of Person</string>
    <string name="the_gender">Gender</string>
    <string name="listTitle">THE TITLE</string>
    <string name="relation">Relation with the person</string>
    <string name="eventTitle">LIFE EVENTS</string>
    <string name="peopleTile">FAMILY</string>
    <string name="person_gender">Gender of Person</string>
    <string name="queryHint">Enter your search string here...</string>
    <string name="personName">Name of person</string>
    <string name="eventInfo">EVENT TYPE: City, Country (year)</string>
    <string name="eventPersonName">Name of Person for the event</string>
    <string name="settingItem">Setting</string>
    <string name="loginFail">Login failed</string>
    <string name="registerFail">Register failed</string>
    <string name="mapFragmentMessage">Click on marker to see event details</string>
    <string name="maleButton">Male</string>
    <string name="femaleButton">Female</string>
    <string name="signInButton">SIGN IN</string>
    <string name="registerButton">REGISTER</string>
    <string name="serverHost">Server Host:</string>
    <string name="serverPort">Server Port:</string>
    <string name="userName">User Name:</string>
    <string name="password">Password:</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="email">Email:</string>
    <string name="gender">Gender:</string>
    <string name="title_activity_maps">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps_to_be_deleted">Map</string>
</resources>
