<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:stretchColumns="1"
        tools:context=".MainActivity">

        <!--the number of columns gets determined by the row that has the largest number of elements added to it-->
        <!--items inside the rows layout row by row-->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:text="@string/serverHost"/>
            <!--EditText where we can type information in, sometimes called a field-->
            <EditText
                android:id="@+id/serverHostField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:inputType="text" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:text="@string/serverPort"/>
            <!--EditText where we can type information in, sometimes called a field-->
            <EditText
                android:id="@+id/serverPortField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:inputType="text" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:text="@string/userName"/>
            <!--EditText where we can type information in, sometimes called a field-->
            <EditText
                android:id="@+id/usernameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:inputType="text" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:text="@string/password"/>
            <!--EditText where we can type information in, sometimes called a field-->
            <EditText
                android:id="@+id/passwordField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:inputType="textPassword" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:text="@string/firstName" />
            <!--EditText where we can type information in, sometimes called a field-->
            <EditText
                android:id="@+id/firstNameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:inputType="text" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:text="@string/lastName"/>
            <!--EditText where we can type information in, sometimes called a field-->
            <EditText
                android:id="@+id/lastNameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:inputType="text" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:text="@string/email" />
            <!--EditText where we can type information in, sometimes called a field-->
            <EditText
                android:id="@+id/emailField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:inputType="textEmailAddress" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:text="@string/gender" />
            <RadioGroup
                android:id ="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/maleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maleButton" />
                <RadioButton
                    android:id="@+id/femaleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/femaleButton" />

            </RadioGroup>
        </TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="30dp">

            <!--@+ means we are declaring an id value, after / come the name of that id-->
            <Button
                android:id="@+id/signInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/signInButton" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registerButton" />
        </LinearLayout>
    </TableLayout>
</ScrollView>
