<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:context=".PersonActivity">
    <RelativeLayout
        android:id="@+id/firstRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/personName"
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:text="@string/person_name"
            android:textSize="17dp"
            android:textStyle="bold"
            android:textColor="@color/text_color"/>
        <TextView
            android:id="@+id/first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_below="@+id/personName"
            android:text="@string/first_name"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:layout_below="@+id/first_name"
            android:background="@color/dark_blue"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/secondRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstRow"
        android:orientation="vertical">
        <TextView
            android:id="@+id/personLastName"
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:text="@string/person_last_name"
            android:textSize="17dp"
            android:textStyle="bold"
            android:textColor="@color/text_color"/>
        <TextView
            android:id="@+id/last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_below="@+id/personLastName"
            android:text="@string/last_name"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:layout_below="@+id/last_name"
            android:background="@color/dark_blue"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/thirdRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/secondRow"
        android:orientation="vertical">
        <TextView
            android:id="@+id/personGender"
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:text="@string/person_gender"
            android:textSize="17dp"
            android:textStyle="bold"
            android:textColor="@color/text_color"/>
        <TextView
            android:id="@+id/the_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_below="@+id/personGender"
            android:text="@string/the_gender"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:layout_below="@+id/the_gender"
            android:background="@color/dark_blue"/>
    </RelativeLayout>
    <ExpandableListView
        android:id="@+id/expandableListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/thirdRow">
    </ExpandableListView>
</RelativeLayout>